<resources>
    <string name="app_name">ROAL</string>
    <string name="todo">TODO</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresa_al_app_de_gestion_de_trabajadores">Ingresa al app de Gestión de trabajadores</string>
    <string name="bienvenido_a">Bienvenido(a)</string>
    <string name="version_app">Versión 1.0</string>
    <string name="contrasena_olvidada">Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="texto_correo_contrasena">Ingresa con tu correo y \ncontraseña.</string>
    <string name="inicio_sesion">Inicio de Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cargando">Cargando</string>
    <string name="ingresar_correo">Ingresa tu correo</string>
    <string name="recuperar_contrasena">Recuperar contraseña</string>
    <string name="llamanos">Si no puedes recuperar tu contraseña, llámanos</string>
    <string name="number">1</string>
    <string name="siguiente">Siguiente</string>
    <string name="codigo_recibido">Escribe el código recibido, verifica tu correo</string>
    <string name="reenviar_nuevamente">Reintentar</string>
    <string name="confrimar_contrasena">Confirmar contraseña</string>
    <string name="llamada_percance">Recuerda llamarnos si ocurre algun percance</string>
    <string name="actualizar">Actualizar</string>
    <string name="estructuras_publicitarias">Estructuras\nPublicitarias</string>
    <string name="subtitulo_roal">Panel de controles de la app de gestión</string>
    <string name="mantenimiento_trabajdores">Mantenimiento\nTrabajdores</string>
    <string name="validacion_epp">Validación\nEPP</string>
    <string name="reportes_trabajadores">Reportes\nTrabajadores</string>
    <string name="perfil">Perfil</string>
    <string name="emergencias">Emergencias</string>
    <string name="ajustes">Ajustes</string>
    <string name="ROAL">Estructuras Publicitarias - ROAL</string>
    <string name="mant_trabajadores">Mantenimiento de trabajadores</string>
    <string name="gestiona_datos_trabajdores">Gestiona los datos de tus trabajdores</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="informacion_mensaje_busca">Ingrese un documento de identidad para poder visualizar información de su trabajdor</string>
    <string name="informacion_respuesta_no_encontrada">No se encontró información con el método consultado</string>
    <string name="inforamcion_error_de_servicio">Ups....parece que el servidor esta fallando, comuniquese con soporte</string>
    <string name="DNI_empleado">Documento de empleado...</string>
    <string name="Dni">DNI : </string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="fecha_de_ingreso">Fecha de Ingreso</string>
    <string name="celular">Celular : </string>
    <string name="nombres">Nombres</string>
    <string name="dni">DNI</string>
    <string name="apellidos">Apellidos</string>
    <string name="mandatory">Campo obligatorio</string>
    <string name="datos_obligatorios">Datos obligatorios</string>
    <string name="celular_form">Celular</string>
    <string name="cel_emergencia_form">Cel. emergencia</string>
    <string name="fecha_de_nacimiento_form">Fecha de nacimiento</string>
    <string name="datos_opcionales_form">Datos opcionales</string>
    <string name="fecha_de_ingreso_form">Fecha de ingreso</string>
    <string name="alergias_form">Alergias</string>
    <string name="enfermedades_pre_existentes_form">Enfermedades</string>
    <string name="grupo_sangu_neo_form">Grupo sanguíneo</string>
    <string name="area_form">Área</string>
    <string name="title_200_register_worker">"Registro exitoso"</string>
    <string name="subtitle_200_register_worker">"Se registro la información de este trabajador"</string>
    <string name="title_404_image">Imagen faltante</string>
    <string name="subtitle_image_description">Inserte una imagen</string>
    <string name="title_missing_parameters">Campos faltantes</string>
    <string name="subtitle_missing_parameters">Revise los campos obligatorios</string>
    <string name="subtitle_missing_area">Seleccione un Área</string>
    <string name="subtitle_missing_dates">Revise las fechas</string>
    <string name="title_error_register">Datos no válidos</string>
    <string name="subtitle_error_register">Problema con el registro del trabajdor, comunicarse con soporte</string>
    <string name="registrar_trabajador">Registrar trabajador</string>
    <string name="dni_del_trabajador">DNI del trabajador</string>
    <string name="title_delete_data">Estas seguro de borrar esta información?</string>
    <string name="successful_delete_data">Información del trabajador borrado</string>
    <string name="fecha_de_creaci_n">Fecha de creación</string>
    <string name="password">*************</string>
    <string name="salir">Salir</string>
    <string name="texto_card_view">Seguirás escuchando sobre nosotros, somos un grupo pequeño de desarolladores, que aun sigue en progreso.</string>
    <string name="textAlerta">La aplicación aun sigue en mejoras funcionales, si tienes problemas comunicate con nosotros.</string>
    <string name="textVerififacion">Se verifica que la aplicación cumple con los Terminos y Condiciones correspondientes.</string>
    <string name="textSegundaVerificacion">Desarrollo por parte de Ingenieros de Sistemas.</string>
    <string name="buscar">Buscar</string>
    <string name="tipos_de_busquedad">Tipos de sangre</string>
    <string name="foto">Foto</string>
    <string name="qr">QR</string>
    <string name="celular_principal">Principal</string>
    <string name="celular_secundario">Secundario</string>
    <string name="llamar">Llamar</string>
    <string name="datos_generales">Datos generales</string>
    <string name="celulares">Celulares</string>
    <string name="fechas">Fechas</string>
    <string name="nacimiento">Nacimiento</string>
    <string name="_12_10_1998">12-10-1998</string>
    <string name="ingreso">Ingreso</string>
    <string name="A">A+</string>
    <string name="posible_lista_de_enf">Enfermedades</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="texto_recomendar">Recomendar a un amigo</string>
    <string name="texto_seguro_recomendar">Compartelo con tus trabajdores</string>
    <string name="terminos">Terminos de servicio</string>
    <string name="politicas">Políticas de privacidad</string>
    <string name="m_s">Más</string>
    <string name="app_versi_n">App versión</string>
    <string name="title_400_image">Revisar la imagen, solo se admite una persona por captura</string>
    <string name="title_200_update">Actualización exitosa</string>
    <string name="campo_no_valido">Datos obligatorios</string>
    <string name="view_trabajador">Trabajador</string>
    <string name="text_dni_cex">DNI/CEX</string>
    <string name="text_documento">Documento...</string>
    <string name="text_nombre_s">Nombre(s)</string>
    <string name="text_nombre">Nombre..</string>
    <string name="text_apellido_s">Apellido(s)</string>
    <string name="text_apellido">Apellido..</string>
    <string name="text_celular_1">Celular 1</string>
    <string name="text_celular">Celular....</string>
    <string name="text_celular_2">Cel/Hogar</string>
    <string name="text_reas">Áreas</string>
    <string name="text_fechas">Fechas</string>
    <string name="text_ingreso">Ingreso</string>
    <string name="hint_fecha">yyyy-mm-dd</string>
    <string name="text_nacimiento">Nacimiento</string>
    <string name="text_opcional">Opcional</string>
    <string name="hint_grupo_sanguineo">A, B, AB, O</string>
    <string name="text_molestias">Molestias</string>
    <string name="text_enfermedades">Enfermedades</string>
    <string name="text_t_sangre">Sangre</string>
    <string name="text_al_rgias">Alérgias</string>
    <string name="pattern_principal_number">(^([9](\\d{8})))$</string>
    <string name="title_invalid_phone">Número principal</string>
    <string name="subtitle_invalid_phone">Número de teléfono empieza con 9</string>
    <string name="text_celular_u_hogar">Celular u Hogar</string>
    <string name="text_tipo_de_sangre">Tipo de sangre</string>
    <string name="title_invalid_second_phone">Número emergencia</string>
    <string name="subtitle_invalid_second_phone">El número de emergencia no debe estar vacío o repetir con el primero</string>
    <string name="title_end_session">Se cerró sesión por inactividad. \nDebido a que no se usó la aplicación de gestión por 10 minutos.</string>
    <string name="text_continuar">Continuar</string>
    <string name="text_message_from_be">Message from BE</string>
    <string name="text_aceptar">Aceptar</string>
    <string name="recordar_usuario">Recordar Usuario/Contraseña</string>
    <string name="full_name">%1$s %2$s</string>

    <!--ACTIVITY VALIDATE EPP-->
    <string name="title_card_view">Equipo de protección personal</string>
    <string name="text_inside_image">Seleccione una imagen</string>
    <string name="text_legend_equipped">Equipado</string>
    <string name="text_legend_not_equipped">No equipado</string>
    <string name="text_legend_not_required">No requerido</string>
    <string name="text_title_card_details">Area del trabajdor</string>
    <string name="text_details_card">Detalles del equipo que lleva puesto</string>
    <string name="text_view_details_card">Ver detalles</string>

    <!--ACTIVITY MANAGEMENT WORKER -->
    <string name="text_dni_or_cex_not_allowed">DNI o CEX no permitido</string>

    <!--ACTIVITY CREATE WORKER -->
    <string name="subtitle_missing_gender">Seleccione el género</string>
    <string name="subtitle_missing_nationality">Seleccione una nacionalidad</string>
    <string name="text_drop_down_gender">Sexo</string>
    <string name="text_gender">Género</string>
    <string name="text_nationality">Nación</string>
    <string name="text_drop_down_nationality">Nacionalidad</string>

    <!--ACTIVITY WElCOME -->
    <string name="dark_mode_message">Lo sentimos, nuestra aplicación actualmente no admite el modo oscuro. Pero no te preocupes, desactivaremos el modo oscuro para ti en esta aplicación.</string>
    <string name="message_ok_welcome">OK</string>

    <!--ACTIVITY CODE VERIFICATION -->
    <string name="dialog_singleton_text_button_accept">Aceptar</string>

    <!--ACTIVITY EMERGENCY -->
    <string name="text_title_number_one">Número uno</string>
    <string name="text_title_number_two">Número dos</string>
    <string name="text_title_born_date">Fecha nacimiento</string>
    <string name="text_need_dni_qr">Porfavor verifica que el QR solo sea el DNI</string>
    <string name="action_cancelled_qr">Cancelado</string>
    <string name="error_base64_uri">Ha ocurrido un error</string>
    <string name="text_title_area">Área</string>
    <string name="text_title_country">País</string>

    <!--ACTIVITY UPDATE WORKER -->
    <string name="text_TI">TI</string>
    <string name="text_SO">SO</string>
    <string name="text_CO">CO</string>

    <!--ACTIVITY REPORT WORKER -->
    <string name="text_title_spinner_workers">Lista de trabajadores</string>

</resources>