<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCloseDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/todo"
                android:src="@drawable/baseline_cancel_24" />

            <TextView
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/text_title_card_details"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_regular"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/text_details_card"
                android:textAlignment="center"
                android:textSize="17sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>