<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.login.LoginActivity">

    <data>

        <variable
            name="viewModel"
            type="com.devpaul.estructurapublicitarias_roal.view.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintGeneral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_inicial">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="50dp"
                app:layout_constraintBottom_toTopOf="@+id/tvName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/logo_roal"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/mulish_regular"
                        android:text="@string/inicio_sesion"
                        android:textSize="35sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/mulish_regular"
                        android:text="@string/texto_correo_contrasena"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:background="@drawable/edittext_background_selector"
                            android:drawableEnd="@drawable/icon_email_selector"
                            android:fontFamily="@font/mulish_regular"
                            android:hint="@string/correo"
                            android:text="@={viewModel.userEmail}"
                            android:inputType="textEmailAddress"
                            android:padding="14dp"
                            android:textSize="19sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password_input_layout"
                            style="@style/CustomTextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/text_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints="password"
                                android:background="@drawable/edittext_background_selector"
                                android:fontFamily="@font/mulish_regular"
                                android:text="@={viewModel.userPassword}"
                                android:hint="@string/contrasena"
                                android:inputType="textPassword"
                                android:padding="14dp"
                                android:textSize="19sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/saveStateUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/recordar_usuario" />

                    <Button
                        android:id="@+id/btnLogin"
                        style="@style/botonesGeneral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/iniciar_sesion" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textForgotPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="15dp"
                            android:fontFamily="@font/mulish_regular"
                            android:gravity="end"
                            android:text="@string/contrasena_olvidada"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#424242"
                android:fontFamily="@font/mulish_regular"
                android:gravity="end"
                android:padding="10dp"
                android:paddingEnd="20dp"
                android:text="@string/version_app"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>