<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.forgot_password.forgotPassword.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGeneral"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_arrow_circle_left_24"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="@+id/btnBack"
            app:layout_constraintTop_toBottomOf="@+id/btnBack"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edittext_background_selector"
                android:fontFamily="@font/mulish_regular"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textSize="19sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTypeNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="@+id/inputTypePassword"
            app:layout_constraintTop_toBottomOf="@+id/inputTypePassword"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edittext_background_selector"
                android:fontFamily="@font/mulish_regular"
                android:hint="@string/confrimar_contrasena"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textCursorDrawable="@color/transparent"
                android:textSize="19sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/actualizar"
            style="@style/botonesGeneral"
            app:layout_constraintBottom_toTopOf="@+id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:fontFamily="@font/mulish_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/llamada_percance"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>